# andy2

./: Makefile  README.md  codex_loop.py  example.py  libIOTCAPIsT.md  pyproject.toml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  iotc_jni.c
app/src/main/java/bbl/intl/bambulab/com/: BambuLabApplication.java  CameraActivity.java  DeviceListActivity.java  MainActivity.java  SettingsActivity.java
app/src/main/java/bbl/intl/bambulab/com/config/: Configuration.java
app/src/main/java/bbl/intl/bambulab/com/utils/: NativeLibraryHelper.java
app/src/main/java/com/bambulab/iotc/: IOTCManager.java  IOTCNative.java
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
native/: libIOTCAPIsT.c
native/include/: libIOTCAPIsT.h
research/analysis/: dll_strings.txt  ip address breakdown.txt  public ip list.txt
research/decompiled/: AVAPIs.c  IOTC.c
tests/: integration_test.py  mock_iotc_server.c  test_libIOTCAPIsT.c
